[package]
name = "safe_nodejs"
version = "0.1.0"
authors = ["Josh Wilson <joshuef@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "safe_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
safe_cli = { git = "https://github.com/maidsafe/safe-cli", branch = "master" }
neon = "0.2.0"
neon-serde = "0.1.1"

[patch.crates-io]
safe_app = { git = "https://github.com/maidsafe/safe_client_libs", rev = "f851b9ae" }
safe_core = { git = "https://github.com/maidsafe/safe_client_libs", rev = "f851b9ae" }
neon = { git = "https://github.com/kjvalencik/neon", branch = "node12" }
neon-runtime = { git = "https://github.com/kjvalencik/neon", branch = "node12" }

[features]
mock-network = ["safe_cli/mock-network"]
fake-auth = ["safe_cli/fake-auth"]
scl-mock = ["safe_cli/scl-mock"]
